--- a/static-html/index.html
+++ b/static-html/index.html
@@ -699,7 +699,7 @@
         <div class="options-slider">
             <div class="option-item">
                 <div class="option-image">
-                    <img src="images/Access_Sismo.jpg" alt="Sismo" class="img-fluid" width="307" height="307">
+                    <img src="images/options-sismo.png" alt="Sismo" class="img-fluid" width="307" height="307">
                 </div>
                 <div class="option-text">
                     <p>Remodèle ta silhouette en associant le cardio qui brûle les calories et la machine Sismo qui
@@ -710,7 +710,7 @@
             </div>
             <div class="option-item">
                 <div class="option-image">
-                    <img src="images/Access_Hydromassage_307x307.jpg" alt="Hydromassage" class="img-fluid" width="307"
+                    <img src="images/options-hydromassage.png" alt="Hydromassage" class="img-fluid" width="307"
                          height="307">
                 </div>
                 <div class="option-text">
