--- a/static-html/index.html
+++ b/static-html/index.html
@@ -59,11 +59,6 @@
                             <img src="images/logo.png" alt="Trélissac Fitness" class="logo">
                         </a>
                     </div>
-
-                    <!-- Site Title -->
-                    <div class="site-title">
-                        Trélissac <span class="color-primary">Fitness</span>
-                    </div>
                 </div>
 
                 <!-- Second column: Navigation Menu (visible only on desktop) -->
@@ -82,7 +77,7 @@
                 <!-- Third column: CTA Button (aligned right) -->
                 <div class="col-4 col-lg-3 d-flex justify-content-end">
                     <div class="header-cta">
-                        <a href="#" class="btn btn-inscription">S'inscrire</a>
+                        <a href="https://member.resamania.com/trelissacfitness/registration/offers" class="btn btn-inscription">S'inscrire</a>
                     </div>
                 </div>
 
