--- a/static-html/index.html
+++ b/static-html/index.html
@@ -764,8 +764,7 @@
                 <div class="col-12">
                     <ul class="legal-links">
                         <li><a href="#">Mentions légales</a></li>
-                        <li><a href="#">CGV</a></li>
-                        <li><a href="#">CGU</a></li>
+                        <li><a href="cgv.html">CGV</a></li>
                         <li><a href="#">Plan du site</a></li>
                         <li><a href="#">Politique de confidentialité</a></li>
                         <li><a href="#">Paramétrer les cookies</a></li>
