--- a/static-html/index.html
+++ b/static-html/index.html
@@ -194,7 +194,7 @@
                 <div class="info-container">
                     <div class="promo-banner">
                         <a href="https://member.resamania.com/trelissacfitness/registration" target="_blank">
-                            <img src="images/promo-1003.png" alt="Promotion" class="img-fluid">
+                            <img src="images/promo-1003-2.png" alt="Promotion" class="img-fluid">
                         </a>
                     </div>
                 </div>
